--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ $(document).ready(function () {
     count = count + 1;
     $.ajax({
       dataType: 'JSON',
-      url: 'https://arno.pf-control.de/sites/all/posted.php',
+      url: 'https://arno.pf-control.de/sites/all/poster.php',
       type: 'POST',
       data: {
         email:email,
